# nyy-transfer

./: .gitignore  AGENTS.md  docker-compose.yml
backend/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml  requirements.txt
backend/alembic/: README.md  env.py  script.py.mako
backend/alembic/versions/: 20260526_1709_45e930d4e7dc_init_schema.py  20260527_1200_admin_console.py  20260527_1300_roadmap_features.py  20260528_1000_add_revoke_token.py  20260528_1200_add_empty_dirs.py  20260528_1400_add_logical_file_id.py  20260529_1100_add_upload_batch_id.py  20260529_1300_add_share_logical_files.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py  deps.py  logging.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  share.py  system.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  debug_log.py  file_request.py  share.py  upload.py
backend/app/services/: __init__.py  app_config.py  auth.py  debug_log_store.py  doubao_client.py  email.py  hash_blacklist.py  quota.py  video_analyzer.py
backend/app/utils/: __init__.py  security.py  short_code.py
backend/deploy/: Caddyfile  README.md  nyy.service
backend/docs/: PRD.md  PROGRESS.md  spike-cors.md
backend/doubao_login/: qr_login.py  run.py
backend/scripts/: cors_spike.html  cors_spike_server.py
backend/tests/: __init__.py  conftest.py  e2e_acceptance.py  e2e_full.py  test_debug_logs.py  test_health.py  test_uploads.py  test_utils.py
frontend/: .gitignore  (+5 more)
(+150 files in other folders)
